{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 1546,
  "lineage": "ba1f3116-c2df-8a33-317c-a2184cdeb3b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bce-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/023136c405d7efa1",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/c751b490-39bb-402e-9363-e5e842edc319",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Applicaton-TG/cbe5d0fd27c094f0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/023136c405d7efa1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bce-app-alb/54ae724609b05647",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bce-app-alb",
            "aws_lb_target_group.UAT-BCE-APP-TG",
            "aws_s3_bucket.uat-bce-logs",
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bce-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/37a3b84a927aef9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Applicaton-TG/cbe5d0fd27c094f0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/37a3b84a927aef9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bce-app-alb/54ae724609b05647",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bce-app-alb",
            "aws_lb_target_group.UAT-BCE-APP-TG",
            "aws_s3_bucket.uat-bce-logs",
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bce-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/182a6b016ed900b1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Mapping-TG/3aa8021fbaa07b69",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/182a6b016ed900b1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bce-app-alb/54ae724609b05647",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bce-app-alb",
            "aws_lb_target_group.UAT-BCE-MAP-TG",
            "aws_s3_bucket.uat-bce-logs",
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bcs-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/e626ef51009e72c1",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/c751b490-39bb-402e-9363-e5e842edc319",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Applicaton-TG/180df5b2e1bc167f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/e626ef51009e72c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcs-app-alb/88680ab9dca777aa",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcs-app-alb",
            "aws_lb_target_group.UAT-BCS-APP-TG",
            "aws_s3_bucket.uat-bcs-logs",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bcs-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/85e74c5919cccb3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Applicaton-TG/180df5b2e1bc167f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/85e74c5919cccb3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcs-app-alb/88680ab9dca777aa",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcs-app-alb",
            "aws_lb_target_group.UAT-BCS-APP-TG",
            "aws_s3_bucket.uat-bcs-logs",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bcs-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/6805b37e992ee8fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Mapping-TG/28d5251577005c8e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/6805b37e992ee8fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcs-app-alb/88680ab9dca777aa",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcs-app-alb",
            "aws_lb_target_group.UAT-BCS-MAP-TG",
            "aws_s3_bucket.uat-bcs-logs",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bcw-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/b73cd639a905fe15",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/c751b490-39bb-402e-9363-e5e842edc319",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Applicaton-TG/0710885824c8fbfc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/b73cd639a905fe15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcw-app-alb/88687cfa60341548",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcw-app-alb",
            "aws_lb_target_group.UAT-BCW-APP-TG",
            "aws_s3_bucket.uat-bcw-logs",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bcw-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/e0815471789e358c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Applicaton-TG/0710885824c8fbfc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/e0815471789e358c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcw-app-alb/88687cfa60341548",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcw-app-alb",
            "aws_lb_target_group.UAT-BCW-APP-TG",
            "aws_s3_bucket.uat-bcw-logs",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-bcw-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/2b93a9b436a1e602",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Mapping-TG/1fa26b4cbb7d52a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/2b93a9b436a1e602",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcw-app-alb/88687cfa60341548",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcw-app-alb",
            "aws_lb_target_group.UAT-BCW-MAP-TG",
            "aws_s3_bucket.uat-bcw-logs",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-cffg-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/f54055c34d44b36d",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/c751b490-39bb-402e-9363-e5e842edc319",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Applicaton-TG/04eb87873f9b8ecd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/f54055c34d44b36d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-cffg-app-alb/b86a648bab2e770b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-cffg-app-alb",
            "aws_lb_target_group.UAT-CFFG-APP-TG",
            "aws_s3_bucket.uat-cffg-logs",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-cffg-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/ac97d3d1978759ab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Applicaton-TG/04eb87873f9b8ecd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/ac97d3d1978759ab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-cffg-app-alb/b86a648bab2e770b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-cffg-app-alb",
            "aws_lb_target_group.UAT-CFFG-APP-TG",
            "aws_s3_bucket.uat-cffg-logs",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "uat-cffg-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/f9ff607bdf2ab3fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Mapping-TG/b0cf229dbce9afa8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/f9ff607bdf2ab3fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-cffg-app-alb/b86a648bab2e770b",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-cffg-app-alb",
            "aws_lb_target_group.UAT-CFFG-MAP-TG",
            "aws_s3_bucket.uat-cffg-logs",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-bce-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Mapping-TG/3aa8021fbaa07b69",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bce-app-alb/54ae724609b05647/023136c405d7efa1/510db3c9f43e6849",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCE/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bce-app-alb/54ae724609b05647/023136c405d7efa1/510db3c9f43e6849",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/023136c405d7efa1",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-bce-app-alb-listener",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bce-app-alb",
            "aws_lb_target_group.UAT-BCE-APP-TG",
            "aws_lb_target_group.UAT-BCE-MAP-TG",
            "aws_s3_bucket.uat-bce-logs",
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-bce-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Mapping-TG/3aa8021fbaa07b69",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bce-app-alb/54ae724609b05647/37a3b84a927aef9b/1dedb93fd1483761",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCE/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bce-app-alb/54ae724609b05647/37a3b84a927aef9b/1dedb93fd1483761",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bce-app-alb/54ae724609b05647/37a3b84a927aef9b",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-bce-app-alb-listener80",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bce-app-alb",
            "aws_lb_target_group.UAT-BCE-APP-TG",
            "aws_lb_target_group.UAT-BCE-MAP-TG",
            "aws_s3_bucket.uat-bce-logs",
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-bcs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Mapping-TG/28d5251577005c8e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcs-app-alb/88680ab9dca777aa/e626ef51009e72c1/8912d5a2f9b0d9e7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCS/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcs-app-alb/88680ab9dca777aa/e626ef51009e72c1/8912d5a2f9b0d9e7",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/e626ef51009e72c1",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-bcs-app-alb-listener",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcs-app-alb",
            "aws_lb_target_group.UAT-BCS-APP-TG",
            "aws_lb_target_group.UAT-BCS-MAP-TG",
            "aws_s3_bucket.uat-bcs-logs",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-bcs-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Mapping-TG/28d5251577005c8e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcs-app-alb/88680ab9dca777aa/85e74c5919cccb3a/e29b561c9b2f1e26",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCS/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcs-app-alb/88680ab9dca777aa/85e74c5919cccb3a/e29b561c9b2f1e26",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcs-app-alb/88680ab9dca777aa/85e74c5919cccb3a",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-bcs-app-alb-listener80",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcs-app-alb",
            "aws_lb_target_group.UAT-BCS-APP-TG",
            "aws_lb_target_group.UAT-BCS-MAP-TG",
            "aws_s3_bucket.uat-bcs-logs",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-bcw-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Mapping-TG/1fa26b4cbb7d52a5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcw-app-alb/88687cfa60341548/b73cd639a905fe15/d45d1ec03291b642",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCW/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcw-app-alb/88687cfa60341548/b73cd639a905fe15/d45d1ec03291b642",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/b73cd639a905fe15",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-bcw-app-alb-listener",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcw-app-alb",
            "aws_lb_target_group.UAT-BCW-APP-TG",
            "aws_lb_target_group.UAT-BCW-MAP-TG",
            "aws_s3_bucket.uat-bcw-logs",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-bcw-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Mapping-TG/1fa26b4cbb7d52a5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcw-app-alb/88687cfa60341548/e0815471789e358c/d4376678b868c898",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCW/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-bcw-app-alb/88687cfa60341548/e0815471789e358c/d4376678b868c898",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-bcw-app-alb/88687cfa60341548/e0815471789e358c",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-bcw-app-alb-listener80",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-bcw-app-alb",
            "aws_lb_target_group.UAT-BCW-APP-TG",
            "aws_lb_target_group.UAT-BCW-MAP-TG",
            "aws_s3_bucket.uat-bcw-logs",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-cffg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Mapping-TG/b0cf229dbce9afa8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-cffg-app-alb/b86a648bab2e770b/f54055c34d44b36d/805c8e8f0299101e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/CFFG/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-cffg-app-alb/b86a648bab2e770b/f54055c34d44b36d/805c8e8f0299101e",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/f54055c34d44b36d",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-cffg-app-alb-listener",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-cffg-app-alb",
            "aws_lb_target_group.UAT-CFFG-APP-TG",
            "aws_lb_target_group.UAT-CFFG-MAP-TG",
            "aws_s3_bucket.uat-cffg-logs",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "uat-map-cffg-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Mapping-TG/b0cf229dbce9afa8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-cffg-app-alb/b86a648bab2e770b/ac97d3d1978759ab/2dea992db089ad81",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/CFFG/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/uat-cffg-app-alb/b86a648bab2e770b/ac97d3d1978759ab/2dea992db089ad81",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/uat-cffg-app-alb/b86a648bab2e770b/ac97d3d1978759ab",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.uat-cffg-app-alb-listener80",
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_lb.uat-cffg-app-alb",
            "aws_lb_target_group.UAT-CFFG-APP-TG",
            "aws_lb_target_group.UAT-CFFG-MAP-TG",
            "aws_s3_bucket.uat-cffg-logs",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "uat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eda723774197030",
            "association_id": "eipassoc-0787166ece7676ad4",
            "domain": "vpc",
            "id": "eipalloc-07eda723774197030",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0bba44a6c917c441f",
            "private_dns": "ip-10-1-0-72.eu-west-2.compute.internal",
            "private_ip": "10.1.0.72",
            "public_dns": "ec2-18-168-102-174.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.102.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "UAT-EIP1"
            },
            "tags_all": {
              "Name": "UAT-EIP1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068cf2f8a16740ea4",
            "association_id": "eipassoc-0a0d8a2a4fee68c5a",
            "domain": "vpc",
            "id": "eipalloc-068cf2f8a16740ea4",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-09d797dda310bab7b",
            "private_dns": "ip-10-1-2-225.eu-west-2.compute.internal",
            "private_ip": "10.1.2.225",
            "public_dns": "ec2-3-8-70-214.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.70.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "UAT-EIP2"
            },
            "tags_all": {
              "Name": "UAT-EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "UAT-EC2-BAST",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d17d5e2b2d0ca4a",
            "arn": "arn:aws:ec2:eu-west-2:975971611990:instance/i-07d265a618a4d210b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "uat-ec2-cloudwatch",
            "id": "i-07d265a618a4d210b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CO-BCP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-09ec3bfab7ea4fd0b",
            "private_dns": "ip-10-1-0-198.eu-west-2.compute.internal",
            "private_ip": "10.1.0.198",
            "public_dns": "ec2-3-8-1-213.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.1.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-2:975971611990:key/9140cbb3-2afd-4221-9c3f-ce5ba6c56f7d",
                "throughput": 0,
                "volume_id": "vol-06db4d01b7b09aa8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a3f1323ec0bf31c",
            "tags": {
              "Name": "UAT-EC2-BASTION1"
            },
            "tags_all": {
              "Name": "UAT-EC2-BASTION1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09aad566388ffe1d7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.uat-ec2-cloudwatch",
            "aws_iam_role.uat-ec2-cloudwatch",
            "aws_security_group.allow_ssh",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "uat-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:internet-gateway/igw-06406ec614cbaf528",
            "id": "igw-06406ec614cbaf528",
            "owner_id": "975971611990",
            "tags": {
              "Name": "UAT-IGW"
            },
            "tags_all": {
              "Name": "UAT-IGW"
            },
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "uat-bce-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "uat-bce-logs",
                "enabled": true,
                "prefix": "uatbce"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bce-app-alb/54ae724609b05647",
            "arn_suffix": "app/uat-bce-app-alb/54ae724609b05647",
            "desync_mitigation_mode": "defensive",
            "dns_name": "uat-bce-app-alb-546190699.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bce-app-alb/54ae724609b05647",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uat-bce-app-alb",
            "security_groups": [
              "sg-06f7771690362d24d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a3f1323ec0bf31c"
              },
              {
                "subnet_id": "subnet-095efb040746c54fd"
              }
            ],
            "subnets": [
              "subnet-02a3f1323ec0bf31c",
              "subnet-095efb040746c54fd"
            ],
            "vpc_id": "vpc-04976fafdcd3c8f88",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_s3_bucket.uat-bce-logs",
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "uat-bcs-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "uat-bcs-logs",
                "enabled": true,
                "prefix": "uatbcs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcs-app-alb/88680ab9dca777aa",
            "arn_suffix": "app/uat-bcs-app-alb/88680ab9dca777aa",
            "desync_mitigation_mode": "defensive",
            "dns_name": "uat-bcs-app-alb-1768519539.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcs-app-alb/88680ab9dca777aa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uat-bcs-app-alb",
            "security_groups": [
              "sg-0e1b62c85b1051686"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a3f1323ec0bf31c"
              },
              {
                "subnet_id": "subnet-095efb040746c54fd"
              }
            ],
            "subnets": [
              "subnet-02a3f1323ec0bf31c",
              "subnet-095efb040746c54fd"
            ],
            "vpc_id": "vpc-04976fafdcd3c8f88",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_s3_bucket.uat-bcs-logs",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "uat-bcw-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "uat-bcw-logs",
                "enabled": true,
                "prefix": "uatbcw"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcw-app-alb/88687cfa60341548",
            "arn_suffix": "app/uat-bcw-app-alb/88687cfa60341548",
            "desync_mitigation_mode": "defensive",
            "dns_name": "uat-bcw-app-alb-815203766.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-bcw-app-alb/88687cfa60341548",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uat-bcw-app-alb",
            "security_groups": [
              "sg-0d821adc8d34b9bcb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a3f1323ec0bf31c"
              },
              {
                "subnet_id": "subnet-095efb040746c54fd"
              }
            ],
            "subnets": [
              "subnet-02a3f1323ec0bf31c",
              "subnet-095efb040746c54fd"
            ],
            "vpc_id": "vpc-04976fafdcd3c8f88",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_s3_bucket.uat-bcw-logs",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "uat-cffg-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "uat-cffg-logs",
                "enabled": true,
                "prefix": "uatcffg"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-cffg-app-alb/b86a648bab2e770b",
            "arn_suffix": "app/uat-cffg-app-alb/b86a648bab2e770b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "uat-cffg-app-alb-60691542.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/uat-cffg-app-alb/b86a648bab2e770b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uat-cffg-app-alb",
            "security_groups": [
              "sg-0c36981a232488731"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a3f1323ec0bf31c"
              },
              {
                "subnet_id": "subnet-095efb040746c54fd"
              }
            ],
            "subnets": [
              "subnet-02a3f1323ec0bf31c",
              "subnet-095efb040746c54fd"
            ],
            "vpc_id": "vpc-04976fafdcd3c8f88",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_iam_role.uat-bcp-rep",
            "aws_kms_key.uat-kms",
            "aws_s3_bucket.uat-cffg-logs",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-BCE-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Applicaton-TG/cbe5d0fd27c094f0",
            "arn_suffix": "targetgroup/UAT-BCE-Applicaton-TG/cbe5d0fd27c094f0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Applicaton-TG/cbe5d0fd27c094f0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-BCE-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-BCE-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Mapping-TG/3aa8021fbaa07b69",
            "arn_suffix": "targetgroup/UAT-BCE-Mapping-TG/3aa8021fbaa07b69",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCE-Mapping-TG/3aa8021fbaa07b69",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-BCE-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-BCS-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Applicaton-TG/180df5b2e1bc167f",
            "arn_suffix": "targetgroup/UAT-BCS-Applicaton-TG/180df5b2e1bc167f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Applicaton-TG/180df5b2e1bc167f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-BCS-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-BCS-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Mapping-TG/28d5251577005c8e",
            "arn_suffix": "targetgroup/UAT-BCS-Mapping-TG/28d5251577005c8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCS-Mapping-TG/28d5251577005c8e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-BCS-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-BCW-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Applicaton-TG/0710885824c8fbfc",
            "arn_suffix": "targetgroup/UAT-BCW-Applicaton-TG/0710885824c8fbfc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Applicaton-TG/0710885824c8fbfc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-BCW-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-BCW-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Mapping-TG/1fa26b4cbb7d52a5",
            "arn_suffix": "targetgroup/UAT-BCW-Mapping-TG/1fa26b4cbb7d52a5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-BCW-Mapping-TG/1fa26b4cbb7d52a5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-BCW-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-CFFG-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Applicaton-TG/04eb87873f9b8ecd",
            "arn_suffix": "targetgroup/UAT-CFFG-Applicaton-TG/04eb87873f9b8ecd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Applicaton-TG/04eb87873f9b8ecd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-CFFG-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "UAT-CFFG-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Mapping-TG/b0cf229dbce9afa8",
            "arn_suffix": "targetgroup/UAT-CFFG-Mapping-TG/b0cf229dbce9afa8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/UAT-CFFG-Mapping-TG/b0cf229dbce9afa8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-CFFG-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "uat-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eda723774197030",
            "connectivity_type": "public",
            "id": "nat-087eb34d4c645c382",
            "network_interface_id": "eni-0bba44a6c917c441f",
            "private_ip": "10.1.0.72",
            "public_ip": "18.168.102.174",
            "subnet_id": "subnet-02a3f1323ec0bf31c",
            "tags": {
              "Name": "UAT-NAT1"
            },
            "tags_all": {
              "Name": "UAT-NAT1"
            }
          },
          "dependencies": [
            "aws_eip.uat-eip",
            "aws_internet_gateway.uat-default",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068cf2f8a16740ea4",
            "connectivity_type": "public",
            "id": "nat-0a45f139672ffc571",
            "network_interface_id": "eni-09d797dda310bab7b",
            "private_ip": "10.1.2.225",
            "public_ip": "3.8.70.214",
            "subnet_id": "subnet-095efb040746c54fd",
            "tags": {
              "Name": "UAT-NAT2"
            },
            "tags_all": {
              "Name": "UAT-NAT2"
            }
          },
          "dependencies": [
            "aws_eip.uat-eip",
            "aws_internet_gateway.uat-default",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "uat-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-065bf1fddadacf39f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-087eb34d4c645c382",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065bf1fddadacf39f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.uat-eip",
            "aws_internet_gateway.uat-default",
            "aws_nat_gateway.uat-default",
            "aws_route_table.uat-private",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0997f1696789a69ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a45f139672ffc571",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0997f1696789a69ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.uat-eip",
            "aws_internet_gateway.uat-default",
            "aws_nat_gateway.uat-default",
            "aws_route_table.uat-private",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "uat-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06406ec614cbaf528",
            "id": "r-rtb-0a16708e6b800d7161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a16708e6b800d716",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.uat-default",
            "aws_route_table.uat-public",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "uat-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:route-table/rtb-065bf1fddadacf39f",
            "id": "rtb-065bf1fddadacf39f",
            "owner_id": "975971611990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087eb34d4c645c382",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UAT-PRIVATE-RT"
            },
            "tags_all": {
              "Name": "UAT-PRIVATE-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:route-table/rtb-0997f1696789a69ba",
            "id": "rtb-0997f1696789a69ba",
            "owner_id": "975971611990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a45f139672ffc571",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UAT-PRIVATE-RT"
            },
            "tags_all": {
              "Name": "UAT-PRIVATE-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "uat-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:route-table/rtb-0a16708e6b800d716",
            "id": "rtb-0a16708e6b800d716",
            "owner_id": "975971611990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06406ec614cbaf528",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UAT-PUBLIC_RT"
            },
            "tags_all": {
              "Name": "UAT-PUBLIC_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "uat-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0524b773e36db22fd",
            "route_table_id": "rtb-065bf1fddadacf39f",
            "subnet_id": "subnet-071ca9cea4927a3a7"
          },
          "dependencies": [
            "aws_route_table.uat-private",
            "aws_subnet.uat-private",
            "aws_vpc.uat-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050cbb7db2c6fc93d",
            "route_table_id": "rtb-0997f1696789a69ba",
            "subnet_id": "subnet-007131e6c2e6bb38f"
          },
          "dependencies": [
            "aws_route_table.uat-private",
            "aws_subnet.uat-private",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "uat-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02456500cf3ec626a",
            "route_table_id": "rtb-0a16708e6b800d716",
            "subnet_id": "subnet-02a3f1323ec0bf31c"
          },
          "dependencies": [
            "aws_route_table.uat-public",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084a37a50ec2fcf51",
            "route_table_id": "rtb-0a16708e6b800d716",
            "subnet_id": "subnet-095efb040746c54fd"
          },
          "dependencies": [
            "aws_route_table.uat-public",
            "aws_subnet.uat-public",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-BCE-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-06f7771690362d24d",
            "description": "Security group for the uat BCE external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f7771690362d24d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "UAT-BCE-EXTALB-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT BCE External ALB security Group"
            },
            "tags_all": {
              "Name": "UAT BCE External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-BCS-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0e1b62c85b1051686",
            "description": "Security group for the uat BCS external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1b62c85b1051686",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "UAT-BCS-EXT-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT BCS External ALB security Group"
            },
            "tags_all": {
              "Name": "UAT BCS External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-BCW-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0d821adc8d34b9bcb",
            "description": "Security group for the uat BCW external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d821adc8d34b9bcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "UAT-BCW-EXTALB-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT BCW External ALB security Group"
            },
            "tags_all": {
              "Name": "UAT BCW External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-CFFG-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0c36981a232488731",
            "description": "Security group for the uat CFFG external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c36981a232488731",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "UAT-CFFG-EXTALB-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT CFFG External ALB security Group"
            },
            "tags_all": {
              "Name": "UAT CFFG External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-EC2-APP-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0ede58afea3e1a9e3",
            "description": "Security group for the uat BCE internal application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ede58afea3e1a9e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f7771690362d24d",
                  "sg-0c36981a232488731",
                  "sg-0d821adc8d34b9bcb",
                  "sg-0e1b62c85b1051686"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09aad566388ffe1d7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "UAT-EC2-APP-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT EC2 Application security Group"
            },
            "tags_all": {
              "Name": "UAT EC2 Application security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_security_group.allow_ssh",
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-EC2-MAP-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-075e9aeb05f5c284c",
            "description": "Security group for the uat mapping server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075e9aeb05f5c284c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "22 from bastion access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09aad566388ffe1d7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f7771690362d24d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c36981a232488731"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d821adc8d34b9bcb"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1b62c85b1051686"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f7771690362d24d"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c36981a232488731"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d821adc8d34b9bcb"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1b62c85b1051686"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "UAT-EC2-MAP-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT EC2 Mapping security Group"
            },
            "tags_all": {
              "Name": "UAT EC2 Mapping security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_security_group.allow_ssh",
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UAT-RDS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-02229b9a482e4dcb4",
            "description": "Security group for the uat mapping server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02229b9a482e4dcb4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075e9aeb05f5c284c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ede58afea3e1a9e3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "UAT-RDS-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT RDS security Group"
            },
            "tags_all": {
              "Name": "UAT RDS security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.UAT-BCE-EXTALB-SG",
            "aws_security_group.UAT-BCS-EXTALB-SG",
            "aws_security_group.UAT-BCW-EXTALB-SG",
            "aws_security_group.UAT-CFFG-EXTALB-SG",
            "aws_security_group.UAT-EC2-APP-SG",
            "aws_security_group.UAT-EC2-MAP-SG",
            "aws_security_group.allow_ssh",
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-09aad566388ffe1d7",
            "description": "Security group for uat bastion server SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09aad566388ffe1d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "5.148.32.192/26",
                  "5.148.69.16/28",
                  "31.221.110.80/29",
                  "154.51.64.64/27",
                  "154.51.128.224/27",
                  "167.98.1.160/28",
                  "167.98.25.176/28",
                  "167.98.200.192/27",
                  "195.95.131.0/24"
                ],
                "description": "NCC Temp SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "UAT-PUBLIC-BASTION-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UAT Bastion security Group"
            },
            "tags_all": {
              "Name": "UAT Bastion security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "uat-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-071ca9cea4927a3a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071ca9cea4927a3a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "UAT-PRIVATE-SUB1"
            },
            "tags_all": {
              "Name": "UAT-PRIVATE-SUB1"
            },
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-007131e6c2e6bb38f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007131e6c2e6bb38f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "UAT-PRIVATE-SUB2"
            },
            "tags_all": {
              "Name": "UAT-PRIVATE-SUB2"
            },
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "uat-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-02a3f1323ec0bf31c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a3f1323ec0bf31c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "UAT-PUBLIC-SUB1"
            },
            "tags_all": {
              "Name": "UAT-PUBLIC-SUB1"
            },
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-095efb040746c54fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095efb040746c54fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "UAT-PUBLIC-SUB2"
            },
            "tags_all": {
              "Name": "UAT-PUBLIC-SUB2"
            },
            "vpc_id": "vpc-04976fafdcd3c8f88"
          },
          "dependencies": [
            "aws_vpc.uat-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "uat-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:vpc/vpc-04976fafdcd3c8f88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04ef569a417f83169",
            "default_route_table_id": "rtb-062998d4403714fbb",
            "default_security_group_id": "sg-0c6d6192429f6e811",
            "dhcp_options_id": "dopt-b2886bdb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04976fafdcd3c8f88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062998d4403714fbb",
            "owner_id": "975971611990",
            "tags": {
              "Name": "UAT-VPC"
            },
            "tags_all": {
              "Name": "UAT-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}